Tue Apr 12 14:10:17 BST 2011  Jordi Mallach  <jordi@gnu.org>

	* po/ca.po: Update from Translation Project.

Tue Apr 12 14:03:38 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): whatis->whatis may be NULL in
	  the case of an empty page.  Guard against this (Debian bug
	  #622104).
	* src/tests/mandb-5: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-5.
	* NEWS: Document this.

Sun Apr 10 22:09:10 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0.1.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Sun Apr 10 14:45:52 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (read_config_file): Read a user-specified configuration
	  file even if HOME is unset.
	* NEWS: Document this.

Sun Apr 10 02:10:56 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/descriptions_store.c (store_descriptions): Ensure that the
	  target of a symlink or .so chain is always recorded as a real
	  page.  Fixes mandb-2 test failures.
	* NEWS: Document this.

Sun Apr 10 01:55:28 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-2: Test the case where a manual page changes from
	  a symbolic link to a regular file, as well as vice versa.

Sat Apr  9 13:30:16 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po, po/man-db.pot,
	  po/*.po: Update.

Sat Apr  9 13:21:08 BST 2011  Colin Watson  <cjwatson@debian.org>

	Upgrade to Libtool 2.4.

Sat Apr  9 12:56:02 BST 2011  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output): Wrap first cell
	  in --ascii translation table.
	* man/man8/mandb.man8 (DATABASE CACHES): Wrap second cell in
	  database type table.
	* man/po4a/Locale/Po4a/Manext.pm (shiftline): Fix T} detection.
	* man/po4a/po/ru.po: Don't translate "\\*[softhyphen]".

Sat Apr  9 11:52:20 BST 2011  Colin Watson  <cjwatson@debian.org>
